change to chinese
change to chinese

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Ce Li</title>
+    <title>浅译万象</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/indexstyle2.css">
 	<script src="./jquery.js"></script>
@@ -36,18 +36,21 @@
 <div id="catalogue">
 
 
+  
 <div id="filters" class="button-group">  
-  <button class="button is-checked" data-filter="*">Ce Li</button>
-  <button class="button" data-filter=".architecture">architecture</button>
-  <button class="button" data-filter=".algorithm">algorithm</button>
-  <button class="button" data-filter=".media">media</button>
+  <button class="button is-checked" data-filter="*">浅译万象</button>
+  <br>
+  <button class="button" data-filter=".architecture">建筑</button>
+  <button class="button" data-filter=".algorithm">算法</button>
+  <button class="button" data-filter=".media">媒体</button>
 </div>
 
 <div id="sorts" class="button-group">  
-  <button class="button is-checked" data-sort-by="type">type</button>
-  <button class="button" data-sort-by="time">time</button>
-  <button class="button" data-sort-by="name">name</button>
+  <button class="button is-checked" data-sort-by="type">类型</button>
+  <button class="button" data-sort-by="time">时间</button>
+  <button class="button" data-sort-by="name">名称</button>
 </div>
+
 </div>
 <div class="grid">
 
