change some size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 </head>
 <body>
-<div id="header"><a href="#contact-content" id="contact">contact</a><span> | </span><a href="./project/resume.pdf" id="resume" target="_blank">resume</a><span> | </span><a href=" ">home</a></div>
+<div id="header"><a href="#contact-content" id="contact">联系我们</a><span> | </span><a href="./project/resume.pdf" id="resume" target="_blank">团队成员</a><span> | </span><a href=" ">回到首页</a></div>
 <h1 id="myname"></h1>
 
 <div id="catalogue">
@@ -46,7 +46,8 @@
 </div>
 
 <div id="sorts" class="button-group">  
-  <button class="button is-checked" data-sort-by="type">类型</button>
+  <!-- <button class="button is-checked" data-sort-by="type">类型</button> -->
+  <button class="button" data-sort-by="type">类型</button>
   <button class="button" data-sort-by="time">时间</button>
   <button class="button" data-sort-by="name">名称</button>
 </div>
