--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
 
 <div id="catalogue">
 
-
-  
-<div id="filters" class="button-group">  
-  <button class="button is-checked" data-filter="*">浅译万象</button>
+  <div id="title"><a href=" ">浅译万象</a></div>
   <br>
+<div id="filters" class="button-group">  
+  <span> 类型筛选： </span> <button class="button is-checked" data-filter="*">全部</button>
   <button class="button" data-filter=".architecture">建筑</button>
   <button class="button" data-filter=".algorithm">算法</button>
   <button class="button" data-filter=".media">媒体</button>
 </div>
 
 <div id="sorts" class="button-group">  
-  <!-- <button class="button is-checked" data-sort-by="type">类型</button> -->
+  <span> 排序方式： </span> <button class="button is-checked" data-sort-by="type">默认</button>
   <button class="button" data-sort-by="type">类型</button>
   <button class="button" data-sort-by="time">时间</button>
   <button class="button" data-sort-by="name">名称</button>
