change font size

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div id="sorts" class="button-group">  
-  <span> 排序方式： </span> <button class="button is-checked" data-sort-by="type">默认</button>
+  <span>  | 排序方式： </span> <button class="button is-checked" data-sort-by="type">默认</button>
   <button class="button" data-sort-by="type">类型</button>
   <button class="button" data-sort-by="time">时间</button>
   <button class="button" data-sort-by="name">名称</button>
