--- a/index.html
+++ b/index.html
@@ -3,35 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的简单网页</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #35424a;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-        }
-        main {
-            padding: 20px;
-            background-color: white;
-            margin-top: 20px;
-        }
-    </style>
+    <title>我的作品集</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的网页</h1>
+        <h1>张三的作品集</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">关于我</a></li>
+                <li><a href="#portfolio">作品展示</a></li>
+                <li><a href="#contact">联系方式</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-        <h2>关于我</h2>
-        <p>这是一个简单的网页示例。您可以在这里添加更多内容。</p>
+        <section id="about">
+            <h2>关于我</h2>
+            <img src="/api/placeholder/200/200" alt="张三的照片" class="profile-pic">
+            <p>这里是您的个人简介。描述您的专业背景、技能和兴趣。</p>
+        </section>
+
+        <section id="portfolio">
+            <h2>作品展示</h2>
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="/api/placeholder/300/200" alt="作品1">
+                    <h3>作品1标题</h3>
+                    <p>作品1简短描述</p>
+                    <a href="project1.html">查看详情</a>
+                </div>
+                <div class="portfolio-item">
+                    <img src="/api/placeholder/300/200" alt="作品2">
+                    <h3>作品2标题</h3>
+                    <p>作品2简短描述</p>
+                    <a href="project2.html">查看详情</a>
+                </div>
+                <!-- 可以继续添加更多作品 -->
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>联系方式</h2>
+            <p>邮箱：your.email@example.com</p>
+            <p>电话：123-456-7890</p>
+            <!-- 这里可以添加社交媒体链接 -->
+        </section>
     </main>
+
+    <footer>
+        <p>&copy; 2024 张三的作品集</p>
+    </footer>
 </body>
 </html>
