--- a/index.html
+++ b/index.html
@@ -1,59 +1,282 @@
-<!DOCTYPE html>
-<html lang="zh">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的作品集</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>浅译万象</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="css/indexstyle2.css">
+	<script src="./jquery.js"></script>
+
+	
+	<style type="text/css">
+	body{
+	font-family: DengXian, Calibri, HelveticaLTStd-Roman, Helvetica, Arial, sans-serif;
+	font-size: 1em;
+	line-height: 1.1em;
+	}
+		a:link { color: #000000; }
+		a:visited { color: #000000; }
+		a:hover { color: #FF3A05; }
+		a:active { color: #000000; }
+		a { text-decoration: none; }
+		.hand { cursor:pointer; }
+		img{opacity:1;
+		transition: opacity .4s;
+		-moz-transition: opacity .4s; /* Firefox 4 */
+        -webkit-transition: opacity .4s; /* Safari and Chrome */
+        -o-transition: opacity .4s; /* Opera */
+		}
+		img:hover{opacity:0.2;}
+	</style>
+	
 </head>
 <body>
-    <header>
-        <h1>张三的作品集</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">关于我</a></li>
-                <li><a href="#portfolio">作品展示</a></li>
-                <li><a href="#contact">联系方式</a></li>
-            </ul>
-        </nav>
-    </header>
+<div id="header"><a href="#contact-content" id="contact">联系我们</a><span> | </span><a href="./project/resume.pdf" id="resume" target="_blank">团队成员</a><span> | </span><a href=" ">回到首页</a></div>
+<h1 id="myname"></h1>
 
-    <main>
-        <section id="about">
-            <h2>关于我</h2>
-            <img src="/api/placeholder/200/200" alt="张三的照片" class="profile-pic">
-            <p>这里是您的个人简介。描述您的专业背景、技能和兴趣。</p>
-        </section>
+<div id="catalogue">
 
-        <section id="portfolio">
-            <h2>作品展示</h2>
-            <div class="portfolio-grid">
-                <div class="portfolio-item">
-                    <img src="/api/placeholder/300/200" alt="作品1">
-                    <h3>作品1标题</h3>
-                    <p>作品1简短描述</p>
-                    <a href="project1.html">查看详情</a>
-                </div>
-                <div class="portfolio-item">
-                    <img src="/api/placeholder/300/200" alt="作品2">
-                    <h3>作品2标题</h3>
-                    <p>作品2简短描述</p>
-                    <a href="project2.html">查看详情</a>
-                </div>
-                <!-- 可以继续添加更多作品 -->
-            </div>
-        </section>
+  <div id="title"><a href=" ">浅译万象</a></div>
+  <br>
+<div id="filters" class="button-group">  
+  <span> 类型筛选： </span> <button class="button is-checked" data-filter="*">全部</button>
+  <button class="button" data-filter=".architecture">建筑</button>
+  <button class="button" data-filter=".algorithm">算法</button>
+  <button class="button" data-filter=".media">媒体</button>
+</div>
 
-        <section id="contact">
-            <h2>联系方式</h2>
-            <p>邮箱：your.email@example.com</p>
-            <p>电话：123-456-7890</p>
-            <!-- 这里可以添加社交媒体链接 -->
-        </section>
-    </main>
+<div id="sorts" class="button-group">  
+  <span>  | 排序方式： </span> <button class="button is-checked" data-sort-by="type">默认</button>
+  <button class="button" data-sort-by="type">类型</button>
+  <button class="button" data-sort-by="time">时间</button>
+  <button class="button" data-sort-by="name">名称</button>
+</div>
 
-    <footer>
-        <p>&copy; 2024 张三的作品集</p>
-    </footer>
+</div>
+<div class="grid">
+
+  <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Sonnenterrasse</h3>
+	<p class="size">Architectural Design</p>
+    <p class="type">Professional</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/arch/sonnenterrasse0.jpg"></img>
+    </div>
+	
+  <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Continous House</h3>
+	<p class="size">Architectural Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/arch/robert0.jpg"></img>
+    </div>
+
+  <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Raster Poche</h3>
+	<p class="size">Computational Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/arch/athens0.jpg"></img>
+    </div>
+  
+    <div class="element-item architecture" data-category="architecture">
+    <h3 class="name">R.O.S.E</h3>
+	<p class="size">Urban Design</p>
+    <p class="type">Competition</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/arch/uli0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Atlantis</h3>
+	<p class="size">Computational Design</p>
+    <p class="type">Competition</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/arch/atlantis0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Plouto</h3>
+	<p class="size">Skyscraper Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2016</p>
+    <img class="list-img" src="./project/arch/ny0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Cloud City</h3>
+	<p class="size">Residential Area Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2015</p>
+    <img class="list-img" src="./project/arch/cloud0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Arc Hotel</h3>
+	<p class="size">Hotel Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2014</p>
+    <img class="list-img" src="./project/arch/hotel0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Wind City</h3>
+	<p class="size">Computational Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2016</p>
+    <img class="list-img" src="./project/arch/wind0.jpg"></img>
+  </div>
+
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Center of Creator</h3>
+	<p class="size">Student Center Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2014</p>
+    <img class="list-img" src="./project/arch/shatang0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Death&amp;Rebirth</h3>
+	<p class="size">Landscape Design</p>
+    <p class="type">Competition</p>
+    <p class="time">2016</p>
+    <img class="list-img" src="./project/arch/liushui0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Porsche Center</h3>
+	<p class="size">Construction Drawing</p>
+    <p class="type">Professional</p>
+    <p class="time">2016</p>
+    <img class="list-img" src="./project/arch/porsche0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Yunhe Renjia</h3>
+	<p class="size">Construction Drawing</p>
+    <p class="type">Professional</p>
+    <p class="time">2016</p>
+    <img class="list-img" src="./project/arch/yunhe0.jpg"></img>
+  </div>
+  
+    <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Module Housing</h3>
+	<p class="size">Tectonic Design</p>
+    <p class="type">Academic</p>
+    <p class="time">2016</p>
+    <img class="list-img" src="./project/arch/graduate0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Simple Complexity</h3>
+	<p class="size">Fabrication</p>
+    <p class="type">Academic</p>
+    <p class="time">2015</p>
+    <img class="list-img" src="./project/code/subdivision0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Sacred Dimension</h3>
+	<p class="size">Fabrication</p>
+    <p class="type">Academic</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/code/difab0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Basic CA</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2016</p>
+    <img class="list-img" src="./project/code/ca0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Alien</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/code/redi0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Cloud</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2015</p>
+    <img class="list-img" src="./project/code/cloud0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Wave</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2015</p>
+    <img class="list-img" src="./project/code/wave0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Tree Eye</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2014</p>
+    <img class="list-img" src="./project/code/l-system0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Chimera</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2014</p>
+    <img class="list-img" src="./project/code/chimera0.jpg"></img>
+  </div>
+  
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Free Mandebrot</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/code/mande0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Rhythm Collar</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/code/collar0.jpg"></img>
+  </div>
+  
+    <div class="element-item algorithm " data-category="architecture">
+    <h3 class="name">Sub-cross</h3>
+	<p class="size">Application</p>
+    <p class="type">Academic</p>
+    <p class="time">2017</p>
+    <img class="list-img" src="./project/code/cross0.jpg"></img>
+  </div>
+
+    <div class="element-item media " data-category="architecture">
+    <h3 class="name">NOA Official Site</h3>
+	<p class="size">Web Design</p>
+    <p class="type">Professional</p>
+	<p class="time">2017</p>
+	<a href="http://noarchitecture.com/" class="list-link" target="_blank">
+    <img class="list-img" src="./project/media/noa0.jpg"></img></a>
+  </div>
+  
+    <div class="element-item media " data-category="architecture">
+    <h3 class="name">Wensi Design</h3>
+	<p class="size">Online Platform</p>
+    <p class="type">Professional</p>
+	<p class="time">2016</p>
+	<a href="./project/media/licedesignqr.jpg" class="list-link" target="_blank">
+    <img class="list-img" src="./project/media/licedesign0.jpg"></img></a>
+  </div>
+  
+</div>
+
+	<script src="./isotope.pkgd.js"></script>
+	<script src="./celiiso.js"></script>
 </body>
 </html>
